--- a/osm_extract/osm_config.ini
+++ b/osm_extract/osm_config.ini
@@ -1,17 +1,21 @@
 #
 # Configuration file for OSM import
+# From http://www.portailsig.org/content/recuperer-des-donnees-openstreetmap-gdalogr
 #
-
+ 
 # put here the name of keys for ways that are assumed to be polygons if they are closed
 # see http://wiki.openstreetmap.org/wiki/Map_Features
-closed_ways_are_polygons=aeroway,amenity,boundary,building,craft,geological,historic,landuse,leisure,military,natural,office,place,shop,sport,tourism
-
+closed_ways_are_polygons=aeroway,amenity,boundary,building,craft,geological,historic,landuse,leisure,military,natural,office,place,shop,sport,tourism,waterway
+ 
 # comment to avoid laundering of keys ( ':' turned into '_' )
 attribute_name_laundering=yes
-
+ 
+# uncomment to report all nodes, including the ones without any (significant) tag
+#report_all_nodes=yes
+ 
 # uncomment to report all ways, including the ones without any (significant) tag
 #report_all_ways=yes
-
+ 
 [points]
 # common attributes
 osm_id=yes
@@ -20,18 +24,16 @@ osm_timestamp=no
 osm_uid=no
 osm_user=no
 osm_changeset=no
-
+ 
 # keys to report as OGR fields
-attributes=name,place,tourism,population,amenity,tourism,historic,man_made,railway,highway
+attributes=name,barrier,highway,ref,address,is_in,place,man_made,population,amenity,shop,tourism,railway,historic,office,craft
 # keys that, alone, are not significant enough to report a node as a OGR point
-unsignificant=created_by,converted_by,source,time,ele,attribution
+unsignificant=created_by,converted_by,source,time,ele
 # keys that should NOT be reported in the "other_tags" field
 ignore=created_by,converted_by,source,time,ele,note,openGeoDB:,fixme,FIXME
 # uncomment to avoid creation of "other_tags" field
 #other_tags=no
-# uncomment to create "all_tags" field. "all_tags" and "other_tags" are exclusive
-#all_tags=yes
-
+ 
 [lines]
 # common attributes
 osm_id=yes
@@ -40,28 +42,14 @@ osm_timestamp=no
 osm_uid=no
 osm_user=no
 osm_changeset=no
-
+ 
 # keys to report as OGR fields
-attributes=name,waterway,width,railway,highway,oneway,bridge,tunnel,maxspeed
-
-# type of attribute 'foo' can be changed with something like
-#foo_type=Integer/Real/String/DateTime
-
+attributes=name,highway,waterway,aerialway,barrier,man_made,oneway,bridge,tunnel,maxspeed,ref,railway,width
 # keys that should NOT be reported in the "other_tags" field
-ignore=created_by,converted_by,source,time,ele,note,openGeoDB:,fixme,FIXME
+ignore=area,created_by,converted_by,source,time,ele,note,openGeoDB:,fixme,FIXME
 # uncomment to avoid creation of "other_tags" field
 #other_tags=no
-# uncomment to create "all_tags" field. "all_tags" and "other_tags" are exclusive
-#all_tags=yes
-
-#computed_attributes must appear before the keywords _type and _sql
-computed_attributes=z_order
-z_order_type=Integer
-# Formula based on https://github.com/openstreetmap/osm2pgsql/blob/master/style.lua#L13
-# [foo] is substituted by value of tag foo. When substitution is not wished, the [ character can be escaped with \[ in literals
-z_order_sql="SELECT (CASE [highway] WHEN 'minor' THEN 3 WHEN 'road' THEN 3 WHEN 'unclassified' THEN 3 WHEN 'residential' THEN 3 WHEN 'tertiary_link' THEN 4 WHEN 'tertiary' THEN 4 WHEN 'secondary_link' THEN 6 WHEN 'secondary' THEN 6 WHEN 'primary_link' THEN 7 WHEN 'primary' THEN 7 WHEN 'trunk_link' THEN 8 WHEN 'trunk' THEN 8 WHEN 'motorway_link' THEN 9 WHEN 'motorway' THEN 9 ELSE 0 END) + (CASE WHEN [bridge] IN ('yes', 'true', '1') THEN 10 ELSE 0 END) + (CASE WHEN [tunnel] IN ('yes', 'true', '1') THEN -10 ELSE 0 END) + (CASE WHEN [railway] IS NOT NULL THEN 5 ELSE 0 END) + (CASE WHEN [layer] IS NOT NULL THEN 10 * CAST([layer] AS INTEGER) ELSE 0 END)"
-
-
+ 
 [multipolygons]
 # common attributes
 # note: for multipolygons, osm_id=yes instanciates a osm_id field for the id of relations
@@ -72,17 +60,30 @@ osm_timestamp=no
 osm_uid=no
 osm_user=no
 osm_changeset=no
-
+ 
 # keys to report as OGR fields
-attributes=name,landuse,building
+attributes=name,type,aeroway,amenity,admin_level,barrier,boundary,building,craft,geological,historic,land_area,landuse,leisure,man_made,military,natural,office,place,shop,sport,tourism,waterway,highway
 # keys that should NOT be reported in the "other_tags" field
 ignore=area,created_by,converted_by,source,time,ele,note,openGeoDB:,fixme,FIXME
 # uncomment to avoid creation of "other_tags" field
 #other_tags=no
-# uncomment to create "all_tags" field. "all_tags" and "other_tags" are exclusive
-#all_tags=yes
-
-
+ 
+[multilinestrings]
+# common attributes
+osm_id=yes
+osm_version=no
+osm_timestamp=no
+osm_uid=no
+osm_user=no
+osm_changeset=no
+ 
+# keys to report as OGR fields
+attributes=name,type
+# keys that should NOT be reported in the "other_tags" field
+ignore=area,created_by,converted_by,source,time,ele,note,openGeoDB:,fixme,FIXME
+# uncomment to avoid creation of "other_tags" field
+#other_tags=no
+ 
 [other_relations]
 # common attributes
 osm_id=yes
@@ -91,12 +92,10 @@ osm_timestamp=no
 osm_uid=no
 osm_user=no
 osm_changeset=no
-
+ 
 # keys to report as OGR fields
 attributes=name,type
 # keys that should NOT be reported in the "other_tags" field
 ignore=area,created_by,converted_by,source,time,ele,note,openGeoDB:,fixme,FIXME
 # uncomment to avoid creation of "other_tags" field
 #other_tags=no
-# uncomment to create "all_tags" field. "all_tags" and "other_tags" are exclusive
-#all_tags=yes
