Un projet tuttle pour publier sur data.gouv.fr

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 departement-*/
 departements-pbf/
 polygones/
-publish/
 zips/
 osmosis*
 planet-*.osm.pbf
 departements-shp.zip
 departements/
 .tuttle/
+*.zip
+*.json
